-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
A quick review shows there are several cases this function is called, and this assertion may not be true in some of them.
(lfsck_namespace.c:1466:lfsck_namespace_create_orphan_dir()) ASSERTION( !dt_object_exists(orphan) ) failed: [Fri May 31 01:34:51 2024] LustreError: 36482:0:(lfsck_namespace.c:1466:lfsck_namespace_create_orphan_dir()) LBUG [Fri May 31 01:34:51 2024] Pid: 36482, comm: lfsck_namespace 4.18.0-477.27.1.el8_lustre.ddn17.x86_64 #1 SMP Wed Dec 20 09:59:57 UTC 2023 [Fri May 31 01:34:51 2024] Call Trace TBD: [Fri May 31 01:34:51 2024] [<0>] libcfs_call_trace+0x6f/0xa0 [libcfs] [Fri May 31 01:34:51 2024] [<0>] lbug_with_loc+0x3f/0x70 [libcfs] [Fri May 31 01:34:51 2024] [<0>] lfsck_namespace_create_orphan_dir.isra.68+0x5ba/0x12b0 [lfsck] [Fri May 31 01:34:51 2024] [<0>] lfsck_namespace_dsd_single+0x469/0xd00 [lfsck] [Fri May 31 01:34:51 2024] [<0>] lfsck_namespace_double_scan_dir+0x805/0xbe0 [lfsck] [Fri May 31 01:34:51 2024] [<0>] lfsck_namespace_double_scan_one+0x37c/0x1d70 [lfsck] [Fri May 31 01:34:51 2024] [<0>] lfsck_namespace_double_scan_one_trace_file+0x679/0x7f0 [lfsck] [Fri May 31 01:34:51 2024] [<0>] lfsck_namespace_assistant_handler_p2+0x878/0xa50 [lfsck] [Fri May 31 01:34:51 2024] [<0>] lfsck_assistant_engine+0x15ab/0x1ba0 [lfsck] [Fri May 31 01:34:51 2024] [<0>] kthread+0x134/0x150 [Fri May 31 01:34:51 2024] [<0>] ret_from_fork+0x1f/0x40 [Fri May 31 01:34:51 2024] Kernel panic - not syncing: LBUG